Fixed illegible text on no search results page, Bugzilla 26272.

--- a/themes/phoenix/less/custom.less
+++ b/themes/phoenix/less/custom.less
@@ -222,6 +222,17 @@ footer {
     display: inline;
 }
 
+/* Advanced Search Results */
+.adv_search_terms {
+    color: #eee;
+}
+.adv_search_links {
+    color: #eee;
+    a {
+        color: #fff;
+    }
+}
+
 /* Imports */
 @import "home-page";
 @import "record";
